force-app/main/default/objects/Contract/fields/vlocity_ins__RenewalNotification__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RenewalNotification__c</fullName>
    <description>The time interval before contract expiration when a renewal notification is initiated</description>
    <label>Renewal Notification Period</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>