force-app/main/default/objects/Contract/fields/vlocity_ins__TerminateDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TerminateDate__c</fullName>
    <description>Date this contract was terminated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Terminate Date</label>
    <type>Date</type>
</CustomField>