force-app/main/default/objects/Contract/fields/vlocity_ins__TerminationReason__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TerminationReason__c</fullName>
    <description>The reason this contract was terminated</description>
    <label>Termination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Not Compliance</fullName>
            </value>
            <value>
                <fullName>Termination without Cause</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>