force-app/main/default/objects/Contract/recordTypes/VHFFinalApplication.recordType-meta.xml
<RecordType>
    <fullName>VHFFinalApplication</fullName>
    <active>true</active>
    <label>VHFFinalApplication</label>
</RecordType>