force-app/main/default/objects/Contract/recordTypes/vlocity_ins__Producer.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__Producer</fullName>
    <active>false</active>
    <label>Producer</label>
</RecordType>