force-app/main/default/objects/Contract/validationRules/Assessed_property_currency_input_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Assessed_property_currency_input_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Assessed_Property_Value__c )),
AND ($Profile.Name =&apos;Operations&apos;),
AND(
OR(Assessed_Property_Value__c&lt;1 ,Assessed_Property_Value__c&gt;9999999
))


)</errorConditionFormula>
    <errorDisplayField>Assessed_Property_Value__c</errorDisplayField>
    <errorMessage>Assessed property value should be between $1 to $9,999,999</errorMessage>
</ValidationRule>