force-app/main/default/objects/Contract/validationRules/Prevent_Direct_Update_of_App_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Direct_Update_of_App_Status</fullName>
    <active>true</active>
    <description>Rule to prevent Operations users from directly updating the Application Status on Individual Applications.</description>
    <errorConditionFormula>AND( ISCHANGED( Status ) ,
NOT(
OR( ISPICKVAL(Status, &apos;Rejected&apos;), ISPICKVAL(Status, &apos;Cancelled&apos;), ISPICKVAL(Status, &apos;Cancelled Settlement&apos;) )
),
NOT(BypassValidation__c) ,
NOT($Profile.Name = &quot;System Administrator&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You can&apos;t directly set the selected application status!</errorMessage>
</ValidationRule>