force-app/main/default/objects/Contract/validationRules/Prevent_Previous_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Previous_Stage</fullName>
    <active>true</active>
    <errorConditionFormula>OR(CASE(Status,
&quot;Final Application Submitted&quot;,1,
&quot;Rejected&quot;,2,
&quot;Approved&quot;,3,
&quot;Cancelled&quot;,4,
&quot;Funds Transferred&quot;,5,
&quot;Settled&quot;,6,
&quot;Cancelled Settlement&quot;,7,
0)
&lt;
CASE( PRIORVALUE(Status),
&quot;Final Application Submitted&quot;,1,
&quot;Rejected&quot;,2,
&quot;Approved&quot;,3,
&quot;Cancelled&quot;,4,
&quot;Funds Transferred&quot;,5,
&quot;Settled&quot;,6,
&quot;Cancelled Settlement&quot;,7,
0),
AND( ISCHANGED(Status), 
OR(
TEXT(PRIORVALUE(Status)) =  &quot;Rejected&quot; , 
TEXT(PRIORVALUE(Status))= &quot;Cancelled&quot; , 
TEXT(PRIORVALUE(Status)) = &quot;Cancelled Settlement&quot;
) 
)
)</errorConditionFormula>
    <errorMessage>Final Application can not be moved back to previous stage!</errorMessage>
</ValidationRule>