force-app/main/default/objects/Contract/validationRules/Prevent_update_after_closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_update_after_closed</fullName>
    <active>true</active>
    <description>Application can&apos;t be updated once it is Cancelled/Rejected/Cancelled Settlement</description>
    <errorConditionFormula>NOT(ISNEW())  &amp;&amp; (ISPICKVAL( Status ,&quot;Cancelled&quot;)||ISPICKVAL( Status ,&quot;Rejected&quot;)||ISPICKVAL( Status ,&quot;Cancelled Settlement&quot;) ||ISPICKVAL( Status ,&quot;Settled&quot;))&amp;&amp;  NOT(ISCHANGED(Status)) &amp;&amp; NOT(ISCHANGED(BypassValidation__c))</errorConditionFormula>
    <errorMessage>Application can&apos;t be updated once it is Settled/Cancelled/Rejected/Cancelled Settlement!</errorMessage>
</ValidationRule>