force-app/main/default/objects/Contract/validationRules/Require_rejection_cancellation_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_rejection_cancellation_reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(Status , &apos;Rejected&apos;),ISPICKVAL(Status , &apos;Cancelled Settlement&apos;),ISPICKVAL(Status , &apos;Cancelled&apos;)), ISBLANK(Rejection_Cancellation_Reason__c))</errorConditionFormula>
    <errorDisplayField>Rejection_Cancellation_Reason__c</errorDisplayField>
    <errorMessage>Please enter the rejection/cancellation reason!</errorMessage>
</ValidationRule>