force-app/main/default/objects/Contract/validationRules/Restriction_on_Settlement_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Restriction_on_Settlement_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISCHANGED(Status)),
NOT(ISNEW()),
NOT(BypassValidation__c),
OR(
ISPICKVAL(Status,&quot;Cancelled&quot;),
ISPICKVAL(Status,&quot;Rejected&quot;),
ISPICKVAL(Status,&quot;Settled&quot;),
ISPICKVAL(Status,&quot;Funds Transferred&quot;),
ISPICKVAL(Status,&quot;Cancelled Settlement&quot;)),

OR (
ISCHANGED ( Settlement_Date__c)
)
)</errorConditionFormula>
    <errorMessage>Settlement Date field can be updated till the Status &quot;Funds Transferred&quot;</errorMessage>
</ValidationRule>