force-app/main/default/objects/Contract/validationRules/Select_Cancellation_Reason_on_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Cancellation_Reason_on_Cancelled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status, &quot;Cancelled&quot;), (ISBLANK( TEXT( Cancellation_Reason__c ) )))</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>Please select a valid Cancellation Reason!</errorMessage>
</ValidationRule>