force-app/main/default/objects/Contract/validationRules/Users_cannot_update_account_lookup.validationRule-meta.xml
<ValidationRule>
    <fullName>Users_cannot_update_account_lookup</fullName>
    <active>true</active>
    <errorConditionFormula>Not(IsNew())
&amp;&amp;
Not($Profile.Name = &quot;System Administrator&quot;)
&amp;&amp;
Ischanged(AccountId)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>You cannot change the Application to another Applicant</errorMessage>
</ValidationRule>