force-app/main/default/objects/Contract/validationRules/Users_cannot_update_case_lookup.validationRule-meta.xml
<ValidationRule>
    <fullName>Users_cannot_update_case_lookup</fullName>
    <active>true</active>
    <errorConditionFormula>Not(IsNew())
&amp;&amp;
Not($Profile.Name = &quot;System Administrator&quot;)
&amp;&amp;
Ischanged(ApplicationCaseId__c)</errorConditionFormula>
    <errorDisplayField>ApplicationCaseId__c</errorDisplayField>
    <errorMessage>You cannot link the Application to another Case</errorMessage>
</ValidationRule>