force-app/main/default/objects/Contract/listViews/AllContracts.listView-meta.xml
<ListView>
    <fullName>AllContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>ApplicantNames__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>ApplicationCaseId__c</columns>
    <columns>Case_Status__c</columns>
    <columns>Application_Submission_Date__c</columns>
    <columns>Property__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Final Applications</label>
</ListView>