force-app/main/default/objects/Contract/listViews/MyActivatedContracts.listView-meta.xml
<ListView>
    <fullName>MyActivatedContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>ApplicantNames__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>ApplicationCaseId__c</columns>
    <columns>Case_Status__c</columns>
    <columns>Application_Submission_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Final Applications</label>
    <sharedTo>
        <group>All_Lender_Users</group>
    </sharedTo>
</ListView>