force-app/main/default/objects/Contract/listViews/Open_Final_Applications.listView-meta.xml
<ListView>
    <fullName>Open_Final_Applications</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>ApplicantNames__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>ApplicationCaseId__c</columns>
    <columns>Case_Status__c</columns>
    <columns>Application_Submission_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Final Application Submitted,Approved,Funds Transferred</value>
    </filters>
    <label>Open Final Applications</label>
    <sharedTo>
        <group>All_VGSO_Portal_users</group>
    </sharedTo>
</ListView>