force-app/main/default/objects/Contract/listViews/Overdue_Settlements.listView-meta.xml
<ListView>
    <fullName>Overdue_Settlements</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Status__c</field>
        <operation>equals</operation>
        <value>Settlement</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Funds Transferred</value>
    </filters>
    <filters>
        <field>Settlement_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Overdue Settlements</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>